--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^7.1.0",
-    "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@fortawesome/react-fontawesome": "^3.1.1",
     "@headlessui/react": "^2.2.9",
-    "@heroicons/react": "^2.2.0",
-    "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.18",
+    "framer-motion": "^12.31.0",
+    "lucide-react": "^0.563.0",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
